--- a/_articles/RJ-2025-001/RJ-2025-001.Rmd
+++ b/_articles/RJ-2025-001/RJ-2025-001.Rmd
@@ -60,7 +60,7 @@ date: '2025-08-07'
 date_received: '2024-01-11'
 journal:
   firstpage: 5
-  lastpage: 23
+  lastpage: 24
 volume: 17
 issue: 1
 slug: RJ-2025-001
@@ -97,7 +97,7 @@ influence of the content variables intended to be measured and are not
 affected by other systematic determinants unrelated to this content. In
 particular, this article is concerned with Acquiescent Responding (AR):
 the tendency to agree or endorse an item regardless of its content
-(Messick 1966) as a response determinant. When AR is operating and is
+[@Messick:1966] as a response determinant. When AR is operating and is
 not properly controlled, a series of invalidating effects can be
 expected, both at the calibration level (biased item parameter estimates
 and spurious evidence of multidimensionality) and at the scoring level
@@ -109,54 +109,20 @@ invalidating effects of AR, and use procedures for controlling them. Of
 these, the most common is to develop balanced scales. Provided that the
 content variables can be considered as continuous dimensions with two
 end poles, in a fully balanced scale half of the items are keyed toward
-one of the poles while the other half are keyed toward the opposite pole
-(Savalei and Falk 2014; Vigil-Colet, Navarro-Gonzalez, and Morales-Vives
-2020).
+one of the poles while the other half are keyed toward the opposite pole [@Savalei:2014;@Vigil-Colet:2020].
 
 Statistical control of AR in test designs that use balanced scales is
 generally based on factor analytic (FA) procedures, and essentially
 entails explicitly modeling AR as an additional non-content factor. This
-FA-based control operates at two levels (see Ferrando, Lorenzo-Seva, and
-Chico 2003): first, at the level of the factor structure obtained in the
+FA-based control operates at two levels [see @Ferrando:2003]: first, at the level of the factor structure obtained in the
 calibration stage (thus avoiding or minimizing the invalidating effects
 mentioned above); and second, at the level of the factor score estimates
 derived from the calibration structure (thus, providing "cleaner"
 content score estimates that have a more univocal interpretation).
 
-Within the general FA modeling, two main approaches exist at present
-(Savalei and Falk 2014; Fuente and Abad 2020). The first is fully
-confirmatory, and the solution is identified by restricting all the
-loadings on the additional Acquiescence (ACQ) factor to have the same
-unit value (Billiet and McClendon 2000). The second is exploratory or
-semi-confirmatory ( (Ferrando, Lorenzo-Seva, and Chico 2003)): First,
-(a) an unrestricted ACQ factor with (possibly) different loadings and
-(b) an also unrestricted (EFA) direct "content" solution are obtained.
-Second, the direct content solution is either analytically rotated
-(fully exploratory solution) or rotated against a specified or
-semi-specified target (semi-confirmatory solution). The pros and cons of
-both approaches have been discussed and compared by Savalei and Falk
-(2014) and Fuente and Abad (2020). Both studies concluded that the
-confirmatory approach is more robust and user-friendly than the EFA with
-target rotation. However, it is also more sensitive to violation of the
-unit-weight loading assumption for the ACQ factor.
+Within the general FA modeling, two main approaches exist at present [@Savalei:2014;@delaFuente:2020]. The first is fully confirmatory, and the solution is identified by restricting all the loadings on the additional Acquiescence (ACQ) factor to have the same unit value [@Billiet:2000]. The second is exploratory or semi-confirmatory [@Ferrando:2003]: First, (a) an unrestricted ACQ factor with (possibly) different loadings and (b) an also unrestricted (EFA) direct “content” solution are obtained. Second, the direct content solution is either analytically rotated (fully exploratory solution) or rotated against a specified or semi-specified target (semi-confirmatory solution). The pros and cons of both approaches have been discussed and compared by @Savalei:2014 and @delaFuente:2020. Both studies concluded that the confirmatory approach is more robust and user-friendly than the EFA with target rotation. However, it is also more sensitive to violation of the unit-weight loading assumption for the ACQ factor.
 
-Within the general FA-based controlling procedure, two main approaches
-exist at present (Savalei and Falk 2014; Fuente and Abad 2020). The
-first is fully confirmatory, and, in it, the structural FA solution is
-identified by restricting all the loadings on the additional
-Acquiescence (ACQ) factor to have the same unit value (Billiet and
-McClendon 2000). The second is exploratory or semi-confirmatory
-(Ferrando, Lorenzo-Seva, and Chico 2003): First, an unrestricted ACQ
-factor with (possibly) different loadings together with a direct (i.e.
-non-rotated) unrestricted or exploratory (EFA) "content" solution are
-obtained. Second, the direct content solution is either analytically
-rotated (in a fully exploratory solution) or rotated against a specified
-or semi-specified target (in a semi-confirmatory solution). The pros and
-cons of both approaches have been discussed by Savalei and Falk (2014)
-and Fuente and Abad (2020). Both studies concluded that the confirmatory
-approach is more robust and user-friendly than the semi-confirmatory EFA
-with target rotation. However, it is also more sensitive to violation of
-the unit-weight loading assumption for the ACQ factor.
+Within the general FA-based controlling procedure, two main approaches exist at present [@Savalei:2014;@delaFuente:2020]. The first is fully confirmatory, and, in it, the structural FA solution is identified by restricting all the loadings on the additional Acquiescence (ACQ) factor to have the same unit value [@Billiet:2000]. The second is exploratory or semi-confirmatory [@Ferrando:2003]: First, an unrestricted ACQ factor with (possibly) different loadings together with a direct (i.e. non-rotated) unrestricted or exploratory (EFA) “content” solution are obtained. Second, the direct content solution is either analytically rotated (in a fully exploratory solution) or rotated against a specified or semi-specified target (in a semi-confirmatory solution). The pros and cons of both approaches have been discussed by @Savalei:2014 and @delaFuente:2020. Both studies concluded that the confirmatory approach is more robust and user-friendly than the semi-confirmatory EFA with target rotation. However, it is also more sensitive to violation of the unit-weight loading assumption for the ACQ factor.
 
 The aim of this paper is to propose and implement a "hybrid" approach,
 named SIREN, that combines features of both the CFA and EFA approaches.
@@ -168,7 +134,7 @@ remainder of the paper, we shall use the distinction "SIREN procedure"
 and "**siren** package" when necessary so as to avoid confusion.
 
 Most of the basic foundations of SIREN have been discussed in the FA
-literature (e.g. Nunnally 1978). Furthermore, the approach we shall
+literature [e.g., @Nunnally:1978]. Furthermore, the approach we shall
 propose is multi-step (see below), and the first step: estimating an
 unrestricted ACQ factor, is, essentially, the same as that used in the
 exploratory/semi-confirmatory approaches summarized below. So, this part
@@ -184,7 +150,7 @@ factors (e.g. personality dimensions). The basic FA model equation in
 the population is:
 $$\label{EQ1}
   \mathbf{Z} = \boldsymbol{\Lambda} \boldsymbol{\theta} + \boldsymbol{\Psi} \mathbf{E}   (\#eq:EQ1)$$
-where **Z** is an *n × 1* random vector of observed item scores;
+where **Z** is an $n \times 1$ random vector of observed item scores;
 $\boldsymbol{\Lambda}$ is an $n \times p$ factor pattern matrix;
 $\boldsymbol{\theta}$ is an $p\times1$ random vector of 'true' common
 factor scores; $\boldsymbol{\Psi}$ is an $n\times n$ diagonal matrix of
@@ -198,7 +164,7 @@ conditions, the reproduced covariance matrix among the $n$ item scores
 as implied by model \@ref(eq:EQ1) is given by the structural equation:
 $$\label{EQ2}
   \boldsymbol{\Sigma} = \boldsymbol{\Lambda} \boldsymbol{\Phi} \boldsymbol{\Lambda'}  + \boldsymbol{\Psi}^{2}   (\#eq:EQ2)$$
-where $\boldsymbol{\Phi}$ is *p × p* correlation matrix containing the
+where $\boldsymbol{\Phi}$ is $p\times p$ correlation matrix containing the
 correlations between the 'true' common factor scores. Generally, in the
 applications considered here, the **Z** scores will not only be
 mean-centered, but standardized scores, and so, the implied covariance
@@ -216,11 +182,7 @@ be obtained from each other by rotation. In a restricted solution, the
 number of imposed restrictions makes the specified solution
 $\boldsymbol{\Lambda} \boldsymbol{\Phi} \boldsymbol{\Lambda'}$ unique,
 in the sense that it cannot be obtained by rotation of another solution
-(see Joreskog 1969). Although a restricted solution can be obtained by
-using different sets of constraints, the most usual consist of imposing
-an independent-cluster structure (e.g. McDonald 2000): each item has
-only a non-zero loading in one factor, having zero loadings in all the
-others.
+[see @Joreskog:1969]. Although a restricted solution can be obtained by using different sets of constraints, the most usual consist of imposing an independent-cluster structure [e.g. @McDonald:2000]: each item has only a non-zero loading in one factor, having zero loadings in all the others.
 
 At this point, we will start to develop a small, artificial toy example
 to help clarify the explanations that will follow. Suppose a
@@ -260,15 +222,14 @@ correct, if the specified two-factor structure above was directly fitted
 to **R**, two types of distorted results would be expected. First, the
 goodness of model-data fit would not be good. Second, the loading and
 inter-factor correlation estimates would be biased with respect to the
-parameter values in (2) (see e.g. DeMars 2014; Ferrando and Lorenzo-Seva
-2010).
+parameter values in (2) (see e.g. @DeMars:2014; @Ferrando:2010).
 
 The rationale of SIREN can now be explained from the results above. At
 the calibration level, the basic idea is to obtain a corrected or
-cleaned covariance/correlation matrix $\bf{R_{corr}}$ in which the
+cleaned covariance/correlation matrix $\mathbf{R}_{corr}$ in which the
 impact of the ACQ factor has been partialled-out. If this is done
 correctly, a specified restricted CFA solution can be next fitted to
-$\bf{R_{corr}}$ instead of $\bf{R}$ . This solution will now fit well,
+$\mathbf{R}_{corr}$ instead of $\mathbf{R}$ . This solution will now fit well,
 and the 'true' content parameters in [Table 1](#tab1){reference-type="ref"
 reference="tab1"} will be well recovered. At the scoring level, once the
 ACQ and the content structures have been properly estimated, ACQ and
@@ -283,8 +244,7 @@ each factor, half of the items that define this factor are positively
 keyed and the other half are negatively keyed. The condition of partial
 balance implies here that all the factors contain positively and
 negatively keyed items, but that the number of positive and negative
-items is not the same at least in one factor (e.g. Lorenzo-Seva and
-Ferrando 2009)
+items is not the same at least in one factor [e.g. @Lorenzo-Seva:2009].
 
 We shall now illustrate the points so far discussed with our toy
 example. Suppose now that the full content plus ACQ structure in the
@@ -365,14 +325,13 @@ approaches to be discussed in more detail. If the solution is specified
 in the first way above ('resid' method option), SIREN can be viewed as a
 particular application of a residual covariance analysis approach, i.e.
 to initially correct a covariance or a correlation matrix for unwanted
-effects before it is used as input for further structural analyses (e.g.
-Andrews 1984; Asparouhov and Muthen 1984; DeCastellarnau and Saris 2021;
-Berge 2020)
+effects before it is used as input for further structural analyses
+[e.g. @Andrews:1984; @Asparouhov:2023; @DeCastellarnau:2021; @tenBerge:1999].
 
 If the second equivalent specification above: full CFA solution that
 includes the additional fixed ACQ factor ('fixed' method option), is
 used instead, then SIREN can be regarded as a modification of the CFA
-approach initially proposed by Billiet and McClendon (2000). In effect,
+approach initially proposed by @Billiet:2000. In effect,
 in the latter, the ACQ loadings are fixed all of them to unity for
 identification purposes (which is generally unrealistic). In contrast,
 in SIREN these loadings are fixed at the (possibly different) values
@@ -402,43 +361,19 @@ The $z$ item responses in Equation \@ref(eq:EQ3) can be treated as categorical o
 continuous. In the first case, the standardized scores would correspond
 to the continuous-unbounded "strength" latent variable that are assumed
 to underlie the observed scores and generate them according to a
-threshold mechanism (see Muthen 1993). In the second case, they are
+threshold mechanism [see @Muthen:1993]. In the second case, they are
 directly the standardized item scores. From this general modeling, it
 follows that the inter-item correlations are polychoric correlations in
-the first case, and product-moment correlations in the second case (see
-e.g. Ferrando and Lorenzo-Seva 2013, for further details). In the
+the first case, and product-moment correlations in the second case
+[see e.g. @Ferrando:2013 for further details].
+In the
 **siren** package, the user decides how the item responses are to be
 treated by using the 'corr' argument defined below, which has two
 options: \"Pearson\" (product-moment correlations) or "Polychoric"
 (Polychoric/Tetrachoric correlations). Once the correlation matrix has
 been obtained, the results that follow are common for both treatments.
 
-Consider now the (polychoric or product-moment) reduced inter-item
-correlation matrix with communalities in the main diagonal (see Ferrando
-and Lorenzo-Seva 2010). If (a) all the assumptions so far
-(independent-cluster structure, full balance within factors) were met,
-(b) the specified FA model was correct, and (c) the item communalities
-were known, then the first centroid loading (e.g. Lawley 1960) for item
-$j$ would correspond to the loading this item has on the ACQ factor
-(i.e. $\alpha_{ja}$) in the population. In the unidimensional content
-case, further details on this result can be obtained from Ferrando,
-Lorenzo-Seva, and Chico (2003), and, provided that full within-factor
-balance applies, the result also holds directly in the multidimensional
-case. Indeed, the conditions above are only approximately met at best
-(in particular, true communalities as assumed in the centroid method,
-are never known; (see McDonald 1978). And, furthermore, the first
-centroid loading is a sample estimate. For these reasons, our choice in
-SIREN is to first obtain the first principal-axis or canonical factor by
-using an efficient EFA estimation procedure: Minimum Rank Factor
-Analysis (MRFA, Berge and Kiers 1991), and next rotate this factor
-against the centroid vector that is used as a criterion (see Eysenck
-1950). The final factor so obtained is taken in SIREN as an estimate of
-the ACQ factor. As for the MRFA choice, it is because of its robustness
-and because it provides estimates of the proportion of common variance
-accounted for by the different factors, and this information is useful
-for assessing the relevance of the ACQ factor in terms of explained
-common variance. The proportion of ACQ explained common variance is
-provided under the heading 'rACQvariance' in the SIREN package output.
+Consider now the (polychoric or product-moment) reduced inter-item correlation matrix with communalities in the main diagonal [see @Ferrando:2010]. If (a) all the assumptions so far (independent-cluster structure, full balance within factors) were met, (b) the specified FA model was correct, and (c) the item communalities were known, then the first centroid loading [e.g. @Lawley:1960] for item $j$ would correspond to the loading this item has on the ACQ factor (i.e. $\alpha_{ja}$) in the population. In the unidimensional content case, further details on this result can be obtained from @Ferrando:2003, and, provided that full within-factor balance applies, the result also holds directly in the multidimensional case. Indeed, the conditions above are only approximately met at best (in particular, true communalities as assumed in the centroid method, are never known; [see @McDonald:1978]. And, furthermore, the first centroid loading is a sample estimate. For these reasons, our choice in SIREN is to first obtain the first principal-axis or canonical factor by using an efficient EFA estimation procedure: Minimum Rank Factor Analysis (MRFA; @tenBerge:1991), and next rotate this factor against the centroid vector that is used as a criterion [see @Eysenck:1950]. The final factor so obtained is taken in SIREN as an estimate of the ACQ factor. As for the MRFA choice, it is because of its robustness and because it provides estimates of the proportion of common variance accounted for by the different factors, and this information is useful for assessing the relevance of the ACQ factor in terms of explained common variance. The proportion of ACQ explained common variance is provided under the heading 'rACQvariance' in the SIREN package output.
 
 Provided that the preliminary general conditions discussed above are
 met, the correct functioning of the SIREN procedure once the ACQ factor
@@ -458,8 +393,8 @@ response bias and leave a 'clean' corrected correlation that will
 reflect only content. However, if balance is not achieved, then, to a
 greater or lesser extent, the first centroid factor will reflect a
 mixture of ACQ and content. So, some content will be removed by
-partializing, and the resulting content loadings will be biased (see
-Berge 2020). Having said that, however, we also note that the strict
+partializing, and the resulting content loadings will be biased [see @tenBerge:1999].
+Having said that, however, we also note that the strict
 condition of full balance within each factor (or the core set within
 each factor) is probably too strong. Preliminary results by the writers
 suggest that, provided that the content CFA solution is correct and full
@@ -469,21 +404,7 @@ most cases. The extent to which the content loading estimates will
 degrade as imbalance increases is best addressed using simulation, and
 this will be done in the next section.
 
-We turn now to the second, statistical point. Our proposal can be viewed
-as a particular application of what (Nunnally 1978) called an ad-lib
-factorial process, in which successive factors are fitted to residual
-matrices by using different methods. We consider our proposal to be
-indeed legitimate, however, its multi-stage nature necessarily entails a
-loss of information and efficiency, because the successive estimates are
-taken as fixed and known, and their uncertainty is not taken into
-account. In agreement with authors such as (DeCastellarnau and Saris
-2021; Nunnally 1978; Berge 2020) and the empirical results provided by
-(Oberski and Satorra 2013), however, we believe that the impact of the
-loss of efficiency discussed above on the point estimates and indices of
-goodness of fit will be relatively minor in practice provided that the
-proposed solution is correct and the basis conditions are reasonably
-met. The issue, however, needs to be, and will be, assessed by using
-simulation.
+We turn now to the second, statistical point. Our proposal can be viewed as a particular application of what [@Nunnally:1978] called an ad-lib factorial process, in which successive factors are fitted to residual matrices by using different methods. We consider our proposal to be indeed legitimate, however, its multi-stage nature necessarily entails a loss of information and efficiency, because the successive estimates are taken as fixed and known, and their uncertainty is not taken into account. In agreement with authors such as [@DeCastellarnau:2021; @Nunnally:1978; @tenBerge:1999] and the empirical results provided by [@Oberski:2013], however, we believe that the impact of the loss of efficiency discussed above on the point estimates and indices of goodness of fit will be relatively minor in practice provided that the proposed solution is correct and the basis conditions are reasonably met. The issue, however, needs to be, and will be, assessed by using simulation.
 
 ### Multi-stage approach with fully balanced scales
 
@@ -510,13 +431,13 @@ least squares terms: i.e. the first rotated MRFA factor is that is the
 closest to the target centroid in the least-squares sense.
 
 Stage 2: obtain the corrected (i.e. ACQ free) inter-item residual matrix
-as $\bf{R_{corr}}$ = $\bf{R}$
-$- \boldsymbol{\alpha}$$\boldsymbol{\alpha}^{'}$. The $\bf{R_{corr}}$
+as $\mathbf{R}_{corr}$ = $\bf{R}$
+$- \boldsymbol{\alpha}$$\boldsymbol{\alpha}^{'}$. The $\mathbf{R}_{corr}$
 matrix is, and should be treated as, a residual covariance matrix (not a
 correlation matrix).
 
 Stage 3: The prescribed CFA solution can be specified and fitted in two
-alternative ways. The first is to input $\bf{R_{corr}}$ specified as a
+alternative ways. The first is to input $\mathbf{R}_{corr}$ specified as a
 covariance matrix to the SEM program, and request a standardized
 solution. The output will consist of the standardized content pattern
 with loadings that are free of ACQ. The second way is to input the raw
@@ -524,14 +445,14 @@ data to the SEM program, by specifying the prescribed CFA content
 solution, plus an additional ACQ factor in which all the loadings are
 specified as fixed and known. In this second specification, the ACQ
 loadings $\boldsymbol{\alpha}$ obtained in stage 2 cannot be imputed
-directly because $\bf{R_{corr}}$ is a covariance matrix (i.e.
+directly because $\mathbf{R}_{corr}$ is a covariance matrix (i.e.
 unstandardized) while the loadings on $\boldsymbol{\alpha}$ are
 standardized. The correct values to be imputed are thus those obtained
 by multiplying each standardized loading on $\boldsymbol{\alpha}$ by the
 corresponding item standard deviation:
 $\boldsymbol{\alpha_{x}}$(scaled)$=\boldsymbol{\alpha_{x}}\bf{sx}$. This
 scaling transforms the standardized loadings $\boldsymbol{\alpha}$ into
-unstandardized loadings (e.g. Bollen 1989). As in the first approach, a
+unstandardized loadings [e.g. @Bollen:1989]. As in the first approach, a
 standardized solution will next be requested in the output. If this is
 done, the output will now provide the standardized content pattern with
 loadings free from ACQ and an additional column containing the
@@ -551,11 +472,10 @@ made choices within
 [**lavaan**](https://CRAN.R-project.org/package=lavaan) that are in
 accordance with the limited-information nature of the procedure as well
 as with the results of the simulation study. The chosen indices are: (a)
-the RMSR and GFI as overall measures of misfit (McDonald and Mok 1995),
+the RMSR and GFI as overall measures of misfit [@McDonald:1995],
 (b) the RMSEA as a measure of relative fit with respect to the degrees
 of freedom (i.e. model complexity), and (c) the CFI as a measure of
-comparative fit with respect to the null independence model (see Tanaka
-1993, for points b and c). These indices are provided in the SIREN
+comparative fit with respect to the null independence model (see @Tanaka:1993, for points b and c). These indices are provided in the SIREN
 package output under the heading 'rfit_indices'.
 
 Stage 5: obtaining individual score estimates. In the basic FA equation
@@ -565,7 +485,7 @@ are unknown. For both, the linear and the nonlinear models, the factor
 score estimates are Bayes Modal a Posteriori (MAP), which, in the
 continuous (linear) model, are known as regression estimates. In both
 cases, Bayesian scoring provides finite and plausible estimates for all
-the respondents under study (see Ferrando and Lorenzo-Seva 2016). For
+the respondents under study [see @Ferrando:2016]. For
 each participant, the output information consists of the point estimate
 of his/her level on the content factors plus his/her factor score
 estimate on the ACQ factor. This last estimate can be interpreted as the
@@ -591,12 +511,14 @@ toy_data <- data.frame(
   `Siren` = c(
     "$$\\boldsymbol{\\Lambda} = \\begin{bmatrix} 0.758 & 0.000 & 0.118 \\\\ -0.664 & 0.000 & 0.175 \\\\ 0.620 & 0.000 & 0.311 \\\\ -0.723 & 0.000 & 0.257 \\\\ 0.000 & 0.605 & 0.382 \\\\ 0.000 & -0.583 & 0.272 \\\\ 0.000 & 0.681 & 0.137 \\\\ 0.000 & -0.582 & 0.165 \\end{bmatrix}$$",
     "$$\\boldsymbol{\\Phi} = \\begin{bmatrix} 1 & .33 & 0 \\\\ .33 & 1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$",
-    "CFI = 1<br/>GFI = .998<br/>RMSEA = 0<br/>SRMR = .024"
+    "CFI = 1; GFI = .998",
+    "RMSEA = 0; SRMR = .024"
   ),
   `Direct` = c(
     "$$\\boldsymbol{\\Lambda} = \\begin{bmatrix} 0.761 & 0.000 \\\\ -0.693 & 0.000 \\\\ 0.631 & 0.000 \\\\ -0.727 & 0.000 \\\\ 0.000 & 0.549 \\\\ 0.000 & -0.552 \\\\ 0.000 & 0.720 \\\\ 0.000 & -0.586 \\end{bmatrix}$$",
     "$$\\boldsymbol{\\Phi} = \\begin{bmatrix} 1 & .35 \\\\ .35 & 1 \\end{bmatrix}$$",
-    "CFI = .922<br/>GFI = .974<br/>RMSEA = .088<br/>SRMR = .049"
+    "CFI = .922; GFI = .974",
+    "RMSEA = .088; SRMR = .049"
   ),
   stringsAsFactors = FALSE
 )
@@ -620,7 +542,7 @@ When an operating common factor is left unmodeled, both, biased
 structural estimates of the remaining parameters and deterioration of
 the GOF indicators are expected. So, in general terms, results in
 [Table 3](#tab3){reference-type="ref" reference="tab3"} are predictable.
-Ferrando and Lorenzo-Seva (2010) and DeMars (2014) can be summarized as
+@Ferrando:2010 and @DeMars:2014 can be summarized as
 follows. With regards to bias, SIREN does a good job, and recovers quite
 acceptably (given both the sample and model size) all the parameters in
 the toy solution: content loadings, ACQ loadings, and inter-factor
@@ -683,8 +605,7 @@ provides a simple estimate of the loading of item $X_o$ on the ACQ
 factor. Note that the sum in the denominator of Equation \@ref(eq:EQ5)
 is taken as fixed
 and known and has been obtained in Stage 2 above. The estimate described
-above can be viewed as an extension-analysis estimate (e.g. McDonald
-1978) obtained by the method of moments.
+above can be viewed as an extension-analysis estimate [e.g. @McDonald:1978] obtained by the method of moments.
 
 The extension estimate Equation \@ref(eq:EQ5) is computed on an item-by-item basis for each of the
 items outside the core set in Stage 3. So, at the end of this stage, ACQ
@@ -795,7 +716,7 @@ how the observed scores are reproduced from the common factors and
 unique loadings, facilitating the interpretation of the factor analysis
 results. The number of items per factor was 10, and the sample size was
 fixed to 300, a value slightly higher than recommended to find accurate
-factor loadings estimates (Fabrigar et al. 1999). To help the reader to
+factor loadings estimates [@Fabrigar:1999]. To help the reader to
 visually understand the design of the simulation study, we provide a
 simplified version of the path diagram in
 [Figure 1](#fig:1){reference-type="ref" reference="fig:1"}.
@@ -821,8 +742,7 @@ realism in the applied context.
 
 For each experimental condition, 200 replicas were generated. A higher
 number of replicas would simply increase the estimation time without
-changing the results. All analyses were conducted with R (R Core Team
-2024). The quality of the estimates was assessed using the average bias
+changing the results. All analyses were conducted with R [@RCore:2024]. The quality of the estimates was assessed using the average bias
 $$\label{EQ6}
   \text{Average Bias} = \frac{1}{n} \sum_{i=1}^{n} (\theta_i - \hat{\theta}_i)   (\#eq:EQ6)$$
 where $\theta_i$ are the observed or true values, $\hat{\theta}_i$ are
@@ -962,7 +882,7 @@ favorable: each content factor is strong and well-defined, without the
 presence of correlated residuals or cross-loadings. In this framework,
 **siren** barely suffers from a lack of specification or bias when
 evaluated conditions are degraded. As ACQ loadings are not set to 1
-(unlike the confirmatory method of Billiet and McClendon 2000), these
+(unlike the confirmatory method of @Billiet:2000), these
 loadings are freely estimated, which is why the heterogeneity of the
 acquiescence pattern does not affect the estimation results.
 
@@ -970,20 +890,17 @@ acquiescence pattern does not affect the estimation results.
 
 To illustrate how the SIREN program works, we have used an existing
 dataset of 1309 participants (55.8% females) between 14 and 19 years old
-(M = 16.4, S.D. = 1.1) from three previous studies (Morales-Vives and
-Dueñas 2018; Morales-Vives, Camps, and Dueñas 2020; Morales-Vives et al.
-in press). Therefore, further details about this data can be obtained
+(M = 16.4, S.D. = 1.1) from three previous studies [@Morales-Vives:2018; @Morales-Vives:2020; @Morales-Vives:inpress]. Therefore, further details about this data can be obtained
 from the original studies. Those participants with missing data were not
 included in the present illustrative analyses. All participants answered
-the Psychological Maturity Assessment Scale questionnaire
-(Morales-Vives, Camps, and Lorenzo-Seva 2013, PSYMAS), which assesses
+the Psychological Maturity Assessment Scale questionnaire [PSYMAS, @Morales-Vives:2013], which assesses
 the psychological maturity of adolescents, understood as the ability to
 take responsibility for one's own obligations, taking into account one's
 own characteristics and needs, without showing excessive dependence on
 others. It consists of 27 items with a five-point response format (1 =
 Completely disagree, 5 = Completely agree) and it assesses the following
 factors: work orientation, self-reliance, and identity. The study
-carried out by (Morales-Vives, Camps, and Lorenzo-Seva 2013), shows that
+carried out by @Morales-Vives:2013, shows that
 (a) the content factors are correlated, and (b) some of the items are
 affected by the acquiescence response bias. This second feature is the
 reason why we chose the data from this questionnaire as an illustration
@@ -1065,16 +982,15 @@ that the full condition of balance within each factor is achieved. As
 for the strength of the content solution, items 2, 6, 9 had loadings of
 .40 or higher (in absolute value) on the self-reliance factor, while
 item 1 had the lowest loading, the same result obtained in the study
-carried out by Morales-Vives, Camps, and Lorenzo-Seva (2013). All the
+carried out by @Morales-Vives:2013. All the
 items of identity had loadings on this factor higher than .40, being
 item 5 the item with the highest loading, which, again, agrees with the
-results by Morales-Vives, Camps, and Lorenzo-Seva (2013). Overall, the
+results by @Morales-Vives:2013. Overall, the
 procedures included in the **siren** program provide the expected
 results, which are congruent with those reported in the previous study,
 even though the latter included a greater number of items than in the
 present study. Furthermore, the correlation between the two factors is
-.436, as was expected, because the study carried out by Morales-Vives,
-Camps, and Lorenzo-Seva (2013) already showed that these factors are
+.436, as was expected, because the study carried out by @Morales-Vives:2013 already showed that these factors are
 positively correlated.
 
 ::: {#tab8}
@@ -1121,7 +1037,7 @@ effects of AR. One of them is fully confirmatory, and the complete
 solution is identified by fixing all the ACQ loadings to the same value.
 The other is unrestricted (i.e. exploratory or semi-confirmatory).
 According to the literature, each of the two approaches has its pros and
-cons (Savalei and Falk 2014; Fuente and Abad 2020)
+cons [@Savalei:2014; @delaFuente:2020].
 
 In this article we have proposed a hybrid EFA-CFA procedure, called
 SIREN, that tries to combine the best features of the two approaches
