--- a/_articles/RJ-2025-007/RJ-2025-007.Rmd
+++ b/_articles/RJ-2025-007/RJ-2025-007.Rmd
@@ -43,7 +43,7 @@ author:
   - (0000-0002-7924-0706)
   - |
     [dmork@hsph.harvard.edu](dmork@hsph.harvard.edu){.uri}
-date: '2025-08-07'
+date: '2025-08-11'
 date_received: '2024-07-12'
 journal:
   firstpage: 136
@@ -81,43 +81,10 @@ draft: no
 ::::: article
 ## Introduction
 
-In many fields, there is interest in estimating the lagged relationship
-between an exposure (or treatment) and an outcome. In such cases, the
-length of the lag or how the exposure effect varies is often unknown.
-The lagged relationship can take either of two forms. The first form is
-the association between the exposure at one time point and an outcome
-distributed across several subsequent times. For example, the impact of
-advertisement persists beyond that single time point of the investment
-(Koyck 1954; Palda 1965) or exposure to an environmental pollutant
-affects mortality on the same day and each of the following days
-(Schwartz 2000). The second form is an exposure assessed longitudinally
-and an outcome assessed post-exposure. Examples of this form are
-maternal exposure to environmental chemicals during pregnancy on birth
-outcomes and children's health and development (Wilson et al. 2017b;
-Chiu et al. 2023; Hsu et al. 2023) and the effect of training and
-recovery activities over multiple days on athlete wellness (Schliep,
-Schafer, and Hawkey 2021). A popular statistical method to estimate the
-time-varying association between exposure and outcome is a distributed
-lag model (DLM).
+In many fields, there is interest in estimating the lagged relationship between an exposure (or treatment) and an outcome. In such cases, the length of the lag or how the exposure effect varies is often unknown. The lagged relationship can take either of two forms. The first form is the association between the exposure at one time point and an outcome distributed across several subsequent times. For example, the impact of advertisement persists beyond that single time point of the investment [@koyck_1954_econDLM;@palda_1965_advertise]
+or exposure to an environmental pollutant affects mortality on the same day and each of the following days [@schwartz_distributed_2000]. The second form is an exposure assessed longitudinally and an outcome assessed post-exposure. Examples of this form are maternal exposure to environmental chemicals during pregnancy on birth outcomes and children's health and development [@wilson_2017_bias;@chiu2023prenatal;@hsu_prenatal_2023] and the effect of training and recovery activities over multiple days on athlete wellness [@schliep_2021_wellness]. A popular statistical method to estimate the time-varying association between exposure and outcome is a distributed lag model (DLM).
 
-The DLM regresses a scalar outcome on the exposure measured at preceding
-time points (Schwartz 2000; Antonio Gasparrini, Armstrong, and Kenward
-2010). The DLM framework is particularly useful as it allows for
-estimating time-resolved exposure effects and quantifies the temporal
-relationship between the exposure and the outcome. Because the repeated
-measurements of exposure are often correlated, DLMs typically include a
-smoothing constraint to add temporal structure to the estimated
-time-specific effects and to regularize the exposure effects in the
-presence of multicollinearity across the measurements. Constraints
-include polynomials, splines, and Gaussian processes (Zanobetti et al.
-2000; Warren et al. 2012). Notably, (Mork and Wilson 2023) introduced an
-approach for constrained DLM using regression tree structures based on
-the Bayesian additive regression tree (BART) framework (Chipman, George,
-and McCulloch 2010). More recent methods have extended the tree
-structured DLM framework in several directions, including nonlinear
-exposure-response relationships (Mork and Wilson 2022), models with
-lagged interactions among multiple exposures (Mork and Wilson 2023), and
-models with heterogeneous lag effects (Mork et al. 2024).
+The DLM regresses a scalar outcome on the exposure measured at preceding time points [@schwartz_distributed_2000;@gasparrini_distributed_2010]. The DLM framework is particularly useful as it allows for estimating time-resolved exposure effects and quantifies the temporal relationship between the exposure and the outcome. Because the repeated measurements of exposure are often correlated, DLMs typically include a smoothing constraint to add temporal structure to the estimated time-specific effects and to regularize the exposure effects in the presence of multicollinearity across the measurements. Constraints include polynomials, splines, and Gaussian processes [@zanobetti_generalized_2000; @warren_spatial-temporal_2012]. Notably, @mork_estimating_2023 introduced an approach for constrained DLM using regression tree structures based on the Bayesian additive regression tree (BART) framework [@chipman2010]. More recent methods have extended the tree structured DLM framework in several directions, including nonlinear exposure-response relationships [@mork_treed_2022], models with lagged interactions among multiple exposures [@mork_estimating_2023], and models with heterogeneous lag effects [@mork_heterogeneous_2023].
 
 There are several related methods and packages for DLM implementation.
 Table [1](#tab:pkgs){reference-type="ref" reference="tab:pkgs"} lists
@@ -125,22 +92,21 @@ currently available R packages for DLMs that are generally appropriate
 for the type of epidemiology studies considered in this paper. The
 [**dlnm**](https://CRAN.R-project.org/package=dlnm) package contains
 software for estimating a DLM with linear or nonlinear exposure-response
-relationships using splines for the smoothing constraint (A. Gasparrini
-2011). (Mork and Wilson 2022, 2023) compare model performance between
+relationships using splines for the smoothing constraint [@gasparrini_dlnm_2013]. @mork_treed_2022 and @mork_estimating_2023 compare model performance between
 the spline-based and tree structured DLM implementations. The
 [**dlnm**](https://CRAN.R-project.org/package=dlnm) package does not
 consider heterogeneity or multiple exposures. There are several DLM
 methods for the linear effect of a single exposure with modification by
 a single covariate. The
 [**dlim**](https://CRAN.R-project.org/package=dlim) package allows for
-modification by a single continuous factor (Demateis et al. 2024) and
+modification by a single continuous factor [@demateis_penalized_2024] and
 the [**bdlim**](https://CRAN.R-project.org/package=bdlim) package allows
 for modification by a single categorical factor (Wilson et al. 2017a).
 However, these packages do not allow for multiple candidate modifying
 factors or multiple exposures. The package
 [**DiscreteDLM**](https://CRAN.R-project.org/package=DiscreteDLM)
 extends Bayesian estimation to categorical outcomes but does not
-consider mixtures or heterogeneity (Dempsey and Wyse 2025). Hence, the
+consider mixtures or heterogeneity [@dempsey2025bayesianvariableselectiondistributed]. Hence, the
 [**dlmtree**](https://CRAN.R-project.org/package=dlmtree) package fills
 several gaps including heterogeneous effects of multiple candidate
 modifiers and analysis of mixture or multivariate lagged exposures.
@@ -212,9 +178,8 @@ between the outcome and a single longitudinally assessed exposure
 $\boldsymbol{\mathbf{x}}_i = (x_{i1}, \ldots, x_{iT})$ measured at
 equally spaced time points, $t = 1, \ldots, T$. Here, exposure time is
 not explicitly defined relative to the outcome. Most commonly, the
-exposures are in the $T$ time points prior to outcome assessment, as in
-[\[eqn:DLMts\]](#eqn:DLMts){reference-type="eqref"
-reference="eqn:DLMts"}, but that is not required. In the illustrations
+exposures are in the $T$ time points prior to outcome assessment, as in \@ref(eq:eqnDLMts),
+but that is not required. In the illustrations
 in this manuscript, we consider exposure during the first $T$ weeks of
 pregnancy and a birth or early childhood health outcome as our
 motivating example. Using this representation, the DLM is
@@ -230,10 +195,10 @@ Section [4.2](#sec:dataprep){reference-type="ref"
 reference="sec:dataprep"}.
 
 The estimation of $\theta_t$ for $t = 1, \ldots, T$ in
-[\[eqn:DLM\]](#eqn:DLM){reference-type="eqref" reference="eqn:DLM"}
+\@ref(eq:eqnDLM)
 requires an appropriate temporal structure, such as a smooth or
 piecewise-smooth constraint on $\theta_t$, to account for
-autocorrelation within the exposure measurements. (Mork and Wilson 2023)
+autocorrelation within the exposure measurements. @mork_estimating_2023
 introduced a regression tree-structure, shown in Figure
 [1](#fig:dlmtree){reference-type="ref" reference="fig:dlmtree"},
 referred to as a DLM tree.
@@ -261,7 +226,7 @@ simplest form and is a Bayesian additive model that consists of an
 ensemble of $A$ DLM trees, indexed as $\mathcal{T}_a$, with a
 corresponding set of scalar parameters $\mathcal{D}_{a}$ for
 $a = 1, \dots, A$. TDLM defines $\theta_t$ in
-([\[eqn:DLM\]](#eqn:DLM){reference-type="ref" reference="eqn:DLM"}) as
+\@ref(eq:eqnDLM) as
 $$\label{eqn:TDLM}
     \theta_{t} = \sum^A_{a = 1} g(t|\mathcal{T}_{a}, \mathcal{D}_{a}).   (\#eq:eqnTDLM)$$
 The representation of the DLM tree ensemble provides several advantages.
@@ -282,7 +247,7 @@ assessed measurements of the $m^{\text{th}}$ exposure, for
 $m = 1, \dots, M$, as
 $\boldsymbol{\mathbf{x}}_{im} =(x_{im1}, \dots, x_{imT})$. The
 exposure-time-response function $f(\boldsymbol{\mathbf{x}}_i)$ in
-[\[eqn:DLM\]](#eqn:DLM){reference-type="eqref" reference="eqn:DLM"} is
+\@ref(eq:eqnDLM) is
 replaced with a mixture-exposure-time-response function that
 incorporates the main effect of each exposure and the pairwise lagged
 interaction effects between exposures. The
@@ -293,14 +258,12 @@ where $\theta_{mt}$ is a main effect of exposure $m$ at time $t$ and
 $\theta_{m_1m_2t_1t_2}$ is an interaction effect of exposure $m_1$ at
 time $t_1$ and exposure $m_2$ at time $t_2$.
 
-Estimating the function in
-[\[eqn:DLMM\]](#eqn:DLMM){reference-type="eqref" reference="eqn:DLMM"}
+Estimating the function in \@ref(eq:eqnDLMM)
 is challenging due to autocorrelation across repeated exposure
 measurements, correlation at the same time lag between exposures, and a
-high-dimensional parameter space. (Mork and Wilson 2023) introduced the
+high-dimensional parameter space. @mork_estimating_2023 introduced the
 treed distributed lag mixture model (TDLMM) that structures the
-parameters in [\[eqn:DLMM\]](#eqn:DLMM){reference-type="eqref"
-reference="eqn:DLMM"} using a DLM tree pair. Figure
+parameters in \@ref(eq:eqnDLMM) using a DLM tree pair. Figure
 [2](#fig:dlmtreepair){reference-type="ref" reference="fig:dlmtreepair"}
 illustrates a single DLM tree pair, denoted
 $\{\mathcal{T}_1, \mathcal{T}_2, \mathcal{T}_1 \times \mathcal{T}_2\}$
@@ -326,7 +289,7 @@ Each DLM tree in the pair is associated with one component of the
 mixture exposures. Similar to the DLM tree described above, each DLM
 tree in the pair partitions the time span of its assigned component.
 Each DLM tree in a tree pair is defined similarly to
-([\[eqn:g1\]](#eqn:g1){reference-type="ref" reference="eqn:g1"}) such
+\@ref(eq:eqng1) such
 that
 $$\label{eqn:g2}
     g(t|\mathcal{T}_{p}, \mathcal{D}_{p}) = \delta_{pc} \quad \text{ if } t \in \lambda_{pc}, \quad p = 1, 2.   (\#eq:eqng2)$$
@@ -352,25 +315,20 @@ TDLMM employs an ensemble representation of $A$ DLM tree pairs denoted
 $\{\mathcal{T}_{a1}, \mathcal{T}_{a2}, \mathcal{T}_{a1} \times \mathcal{T}_{a2}\}$
 with the corresponding set of scalar parameters
 $\{\mathcal{D}_{a1}, \mathcal{D}_{a2}, \Omega_a \}$, using the
-formulation in [\[eqn:g2\]](#eqn:g2){reference-type="eqref"
-reference="eqn:g2"} and [\[eqn:g_I\]](#eqn:g_I){reference-type="eqref"
-reference="eqn:g_I"}. Each DLM tree $\mathcal{T}_{ap}$ is also
+formulation in \@ref(eq:eqng2) and \@ref(eq:eqng-I). Each DLM tree $\mathcal{T}_{ap}$ is also
 associated with exposure $m$, indicated by $S_{ap} = m$. With TDLMM, the
-main effect of exposure $m$ at time $t$ in
-[\[eqn:DLMM\]](#eqn:DLMM){reference-type="eqref" reference="eqn:DLMM"}
-is
+main effect of exposure $m$ at time $t$ in \@ref(eq:eqnDLMM) is
 $$\label{eqn:TDLMMmain}
     \theta_{mt} = \sum^A_{a = 1} \sum^2_{p=1} g(t| \mathcal{T}_{ap}, \mathcal{D}_{ap}) \mathbb{I}(S_{ap} = m).   (\#eq:eqnTDLMMmain)$$
 The pairwise interaction effect between exposure $m_1$ at time $t_1$ and
-exposure $m_2$ at time $t_2$ in
-[\[eqn:DLMM\]](#eqn:DLMM){reference-type="eqref" reference="eqn:DLMM"}
+exposure $m_2$ at time $t_2$ in \@ref(eq:eqnDLMM)
 is
 $$\label{eqn:TDLMMint}
     \theta_{m_1m_2t_1t_2} = \sum^A_{a=1}g_I(t_1, t_2| \mathcal{T}_{a1} \times \mathcal{T}_{a2}, \Omega_a) \mathbb{I}(S_{a1} = m_1, S_{a2} = m_2).   (\#eq:eqnTDLMMint)$$
 TDLMM has three representations depending on different assumptions of
 lagged interactions between exposures. The simplest form, TDLMMadd,
 assumes $\theta_{m_1m_2t_1t_2} = 0$ in
-[\[eqn:DLMM\]](#eqn:DLMM){reference-type="eqref" reference="eqn:DLMM"},
+\@ref(eq:eqnDLMM),
 implying no interaction between exposures, resulting in an additive
 model of the main effects of exposures. The second form, TDLMMns,
 accounts for lagged interaction between exposures but not within
@@ -379,34 +337,23 @@ between and within exposures, implying a nonlinear effect of exposure.
 
 ### Extensions to nonlinear exposure-time-response functions {#sec:nonlinear}
 
-(Mork and Wilson 2022) introduced the treed distributed lag nonlinear
+@mork_treed_2022 introduced the treed distributed lag nonlinear
 model (TDLNM) to estimate the nonlinear association between a single
 longitudinally assessed exposure and an outcome. The DLM tree, as shown
-in [\[eqn:g1\]](#eqn:g1){reference-type="eqref" reference="eqn:g1"},
+in \@ref(eq:eqng1),
 assumes a linear association between exposure at each time point and the
 outcome. To relax the linearity assumption for a distributed lag
 nonlinear model framework, TDLNM modifies the DLM tree to additionally
 split exposure concentration levels along with the exposure time span,
 partitioning the bi-dimensional space of exposure concentration and time
-lags. (Mork and Wilson 2024) further extended TDLNM to include a
+lags. @mork_monotone_2024 further extended TDLNM to include a
 monotonicity assumption, where the exposure-response is constrained to
-be non-decreasing at each time point. See (Mork and Wilson 2022, 2024)
+be non-decreasing at each time point. See @mork_treed_2022 and @mork_monotone_2024
 for details.
 
 ### Extensions to generalized linear models {#sec:glm}
 
-In various applications of DLMs, the response variables may be binary or
-counts. Examples of binary outcomes include the occurrence of conditions
-such as asthma or preterm birth, and an example of a count-valued
-outcome is the daily number of deaths in a county. The linear
-representation of the DLM framework allows the tree structured DLMs to
-extend to the generalized linear model setting. TDLM, TDLNM, and TDLMM
-have been extended to incorporate binary response variables via logistic
-regression (Mork and Wilson 2022, 2023). Further extensions on these
-models allow for count data via negative binomial regression, including
-an option for zero-inflated negative binomial data. The extensions to
-binary and count data rely on a framework based on the Pólya-Gamma data
-augmentation approach (Polson, Scott, and Windle 2013; Neelon 2019).
+In various applications of DLMs, the response variables may be binary or counts. Examples of binary outcomes include the occurrence of conditions such as asthma or preterm birth, and an example of a count-valued outcome is the daily number of deaths in a county. The linear representation of the DLM framework allows the tree structured DLMs to extend to the generalized linear model setting. TDLM, TDLNM, and TDLMM have been extended to incorporate binary response variables via logistic regression [@mork_treed_2022; @mork_estimating_2023]. Further extensions on these models allow for count data via negative binomial regression, including an option for zero-inflated negative binomial data. The extensions to binary and count data rely on a framework based on the Pólya-Gamma data augmentation approach [@polson_bayesian_2013; @neelon_bayesian_2019].
 
 ### Extensions to heterogeneous models {#sec:het}
 
@@ -414,7 +361,7 @@ Another extension to the DLM framework is to assume heterogeneous
 exposure effects. The exposure effects may be heterogeneous due to a
 single modifying factor or a set of factors. For example, the impact of
 prenatal exposure to air pollution may be governed by genetic factors
-such as fetal sex (Rosa et al. 2019). The set of factors, referred to as
+such as fetal sex [@rosa_association_2019]. The set of factors, referred to as
 modifiers, may be continuous, categorical, or ordinal. The general
 approach is to introduce an additional tree, known as a modifier tree,
 that partitions the modifier space and has a DLM tree or a DLM tree pair
@@ -427,7 +374,7 @@ the terminal nodes of a modifier tree to estimate the
 exposure-time-response relationship specific to the
 subgroups.](images/nestedtree.png){#fig:nesttree width="100mm"}
 
-(Mork et al. 2024) extended TDLM to the heterogeneous distributed lag
+@mork_heterogeneous_2023 extended TDLM to the heterogeneous distributed lag
 model (HDLM) by introducing a nested tree structure, as shown in Figure
 [3](#fig:nesttree){reference-type="ref" reference="fig:nesttree"}. In a
 nested tree, a modifier tree is applied to a set of candidate modifiers,
@@ -1385,8 +1332,7 @@ Given the high dimensionality of the tree structured DLMs, a longer
 chain will sample more reliable full posterior distributions for
 inference. Additionally, for logistic and negative binomial models,
 longer burn-in periods are important to ensure convergence. For example,
-in our previous large data analyses with this software (Mork and Wilson
-2023, 2022; Mork et al. 2024), we have used upwards of 10,000 burn-in
+in our previous large data analyses with this software [@mork_estimating_2023;@mork_heterogeneous_2023;@mork_treed_2022] we have used upwards of 10,000 burn-in
 iterations.
 
 Convergence can be assessed in several ways. We have relied on trace
