--- a/_issues/2025-1/2025-1.Rmd
+++ b/_issues/2025-1/2025-1.Rmd
@@ -29,13 +29,14 @@ articles:
   after: ~
 output:
   rjtools::rjournal_pdf_issue:
-    render_all: true
+    render_all: yes
   rjtools::rjournal_web_issue: default
 news:
 - RJ-2025-1-cran
 - RJ-2025-1-rfoundation
 
 ---
+
 
 
 
