--- a/_articles/RJ-2025-002/RJ-2025-002.Rmd
+++ b/_articles/RJ-2025-002/RJ-2025-002.Rmd
@@ -52,7 +52,7 @@ library(kableExtra)
 
 Random forests are a non-parametric, powerful method for prediction purposes. Introduced by Breiman [@breiman_random_2001] for classification (categorical outcome) and regression (continuous outcome) frameworks, random forests are particularly designed to tackle modeling issues in high-dimensional contexts ($n << p$). They can also easily take into account complex associations between the outcome and the predictors without any pre-specification, where regression models are rapidly limited.
 
-Recently, this methodology was extended to survival data [@ishwaran_random_2008] and competing events [@ishwaran_random_2014]. Random forests were implemented in several R [@R_2019] packages such as \CRANpkg{randomForestSRC} [@ishawaran_fast_2022], \CRANpkg{ranger} [@wright_ranger_2017] or \CRANpkg{xgboost} [@chen_xgboost_2016], among others. However, these packages are all limited to time-fixed predictors. Yet, in many applications, it may be relevant to include predictors that are repeatedly measured at multiple occasions (regular or irregular times) with measurement errors to more accurately predict the outcome. This is the case, in particular, in health research where a health outcome is to be predicted according to the history of individual information.
+Recently, this methodology was extended to survival data [@ishwaran_random_2008] and competing events [@ishwaran_random_2014]. Random forests were implemented in several R [@R_2019] packages such as \CRANpkg{randomForestSRC} [@ishwaran_fast_2022], \CRANpkg{ranger} [@wright_ranger_2017] or \CRANpkg{xgboost} [@chen_xgboost_2016], among others. However, these packages are all limited to time-fixed predictors. Yet, in many applications, it may be relevant to include predictors that are repeatedly measured at multiple occasions (regular or irregular times) with measurement errors to more accurately predict the outcome. This is the case, in particular, in health research where a health outcome is to be predicted according to the history of individual information.
 
 We developed an original random forests methodology to tackle this issue and incorporate longitudinal predictors that may be prone to error and possibly intermittently measured [@devaux_random_2023]. The present paper aims to describe the \CRANpkg{DynForest} R package associated with this methodology, allowing the prediction of a continuous, categorical, or survival outcome using multivariate time-dependent predictors.
 
