--- a/_articles/RJ-2025-002/main.tex
+++ b/_articles/RJ-2025-002/main.tex
@@ -14,7 +14,7 @@ The R package DynForest implements random forests for predicting a continuous, a
 
 Random forests are a non-parametric, powerful method for prediction purposes. Introduced by Breiman \citep{breiman_random_2001} for classification (categorical outcome) and regression (continuous outcome) frameworks, random forests are particularly designed to tackle modeling issues in high-dimensional contexts (\(n << p\)). They can also easily take into account complex associations between the outcome and the predictors without any pre-specification, where regression models are rapidly limited.
 
-Recently, this methodology was extended to survival data \citep{ishwaran_random_2008} and competing events \citep{ishwaran_random_2014}. Random forests were implemented in several R \citep{R_2019} packages such as \CRANpkg{randomForestSRC} \citep{ishawaran_fast_2022}, \CRANpkg{ranger} \citep{wright_ranger_2017} or \CRANpkg{xgboost} \citep{chen_xgboost_2016}, among others. However, these packages are all limited to time-fixed predictors. Yet, in many applications, it may be relevant to include predictors that are repeatedly measured at multiple occasions (regular or irregular times) with measurement errors to more accurately predict the outcome. This is the case, in particular, in health research where a health outcome is to be predicted according to the history of individual information.
+Recently, this methodology was extended to survival data \citep{ishwaran_random_2008} and competing events \citep{ishwaran_random_2014}. Random forests were implemented in several R \citep{R_2019} packages such as \CRANpkg{randomForestSRC} \citep{ishwaran_fast_2022}, \CRANpkg{ranger} \citep{wright_ranger_2017} or \CRANpkg{xgboost} \citep{chen_xgboost_2016}, among others. However, these packages are all limited to time-fixed predictors. Yet, in many applications, it may be relevant to include predictors that are repeatedly measured at multiple occasions (regular or irregular times) with measurement errors to more accurately predict the outcome. This is the case, in particular, in health research where a health outcome is to be predicted according to the history of individual information.
 
 We developed an original random forests methodology to tackle this issue and incorporate longitudinal predictors that may be prone to error and possibly intermittently measured \citep{devaux_random_2023}. The present paper aims to describe the \CRANpkg{DynForest} R package associated with this methodology, allowing the prediction of a continuous, categorical, or survival outcome using multivariate time-dependent predictors.
 
@@ -28,7 +28,7 @@ The random forest should first be built on a learning dataset of \(N\) subjects 
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth,height=0.3\textheight]{figures/dynforestR_graph} 
+{\centering \includegraphics[width=1\linewidth,height=0.3\textheight]{figures/dynforestR_graph}
 
 }
 
@@ -446,32 +446,32 @@ summary(res_dyn)
 \end{verbatim}
 
 \begin{verbatim}
-#> dynforest executed for survival (competing risk) outcome 
-#>  Splitting rule: Fine & Gray statistic test 
-#>  Out-of-bag error type: Integrated Brier Score 
-#>  Leaf statistic: Cumulative incidence function 
-#> ---------------- 
-#> Input 
-#>  Number of subjects: 208 
-#>  Longitudinal: 4 predictor(s) 
-#>  Numeric: 1 predictor(s) 
-#>  Factor: 2 predictor(s) 
-#> ---------------- 
-#> Tuning parameters 
-#>  mtry: 3 
-#>  nodesize: 2 
-#>  minsplit: 3 
-#>  ntree: 200 
-#> ---------------- 
-#> ---------------- 
-#> dynforest summary 
-#>  Average depth per tree: 6.62 
-#>  Average number of leaves per tree: 27.68 
-#>  Average number of subjects per leaf: 4.78 
-#>  Average number of events of interest per leaf: 1.95 
-#> ---------------- 
-#> Computation time 
-#>  Number of cores used: 7 
+#> dynforest executed for survival (competing risk) outcome
+#>  Splitting rule: Fine & Gray statistic test
+#>  Out-of-bag error type: Integrated Brier Score
+#>  Leaf statistic: Cumulative incidence function
+#> ----------------
+#> Input
+#>  Number of subjects: 208
+#>  Longitudinal: 4 predictor(s)
+#>  Numeric: 1 predictor(s)
+#>  Factor: 2 predictor(s)
+#> ----------------
+#> Tuning parameters
+#>  mtry: 3
+#>  nodesize: 2
+#>  minsplit: 3
+#>  ntree: 200
+#> ----------------
+#> ----------------
+#> dynforest summary
+#>  Average depth per tree: 6.62
+#>  Average number of leaves per tree: 27.68
+#>  Average number of subjects per leaf: 4.78
+#>  Average number of events of interest per leaf: 1.95
+#> ----------------
+#> Computation time
+#>  Number of cores used: 7
 #>  Time difference of 3.18191 mins
 #> ----------------
 \end{verbatim}
@@ -520,7 +520,7 @@ plot(res_dyn, id = 104, max_tree = 9)
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRCIF-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRCIF-1}
 
 }
 
@@ -574,7 +574,7 @@ The \texttt{predict()} function provides several elements as described in sectio
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRpredCIF-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRpredCIF-1}
 
 }
 
@@ -621,7 +621,7 @@ plot_grid(p1, p2, labels = c("A", "B"))
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRVIMPgVIMP-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRVIMPgVIMP-1}
 
 }
 
@@ -664,7 +664,7 @@ plot_grid(p1, p2, labels = c("A", "B"))
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRmindepth-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRmindepth-1}
 
 }
 
@@ -683,7 +683,7 @@ In the illustration, we tuned \texttt{mtry} for every possible value (1 to 7). F
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRmtrytuned-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRmtrytuned-1}
 
 }
 
@@ -762,33 +762,33 @@ summary(res_dyn_OOB)
 \end{verbatim}
 
 \begin{verbatim}
-#> dynforest executed for categorical outcome 
-#>  Splitting rule: Minimize weighted within-group Shannon entropy 
-#>  Out-of-bag error type: Missclassification 
-#>  Leaf statistic: Majority vote 
-#> ---------------- 
-#> Input 
-#>  Number of subjects: 150 
-#>  Longitudinal: 4 predictor(s) 
-#>  Numeric: 1 predictor(s) 
-#>  Factor: 2 predictor(s) 
-#> ---------------- 
-#> Tuning parameters 
-#>  mtry: 7 
-#>  nodesize: 2 
-#>  ntree: 200 
-#> ---------------- 
-#> ---------------- 
-#> dynforest summary 
-#>  Average depth per tree: 5.89 
-#>  Average number of leaves per tree: 16.81 
-#>  Average number of subjects per leaf: 5.72 
-#> ---------------- 
-#> Out-of-bag error based on Missclassification 
-#>  Out-of-bag error: 0.2333 
-#> ---------------- 
-#> Computation time 
-#>  Number of cores used: 7 
+#> dynforest executed for categorical outcome
+#>  Splitting rule: Minimize weighted within-group Shannon entropy
+#>  Out-of-bag error type: Missclassification
+#>  Leaf statistic: Majority vote
+#> ----------------
+#> Input
+#>  Number of subjects: 150
+#>  Longitudinal: 4 predictor(s)
+#>  Numeric: 1 predictor(s)
+#>  Factor: 2 predictor(s)
+#> ----------------
+#> Tuning parameters
+#>  mtry: 7
+#>  nodesize: 2
+#>  ntree: 200
+#> ----------------
+#> ----------------
+#> dynforest summary
+#>  Average depth per tree: 5.89
+#>  Average number of leaves per tree: 16.81
+#>  Average number of subjects per leaf: 5.72
+#> ----------------
+#> Out-of-bag error based on Missclassification
+#>  Out-of-bag error: 0.2333
+#> ----------------
+#> Computation time
+#>  Number of cores used: 7
 #>  Time difference of 2.87888 mins
 #> ----------------
 \end{verbatim}
@@ -862,7 +862,7 @@ plot_grid(p1, p2, labels = c("A", "B"))
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRfactormindepth-1} 
+{\centering \includegraphics[width=0.8\linewidth,height=0.3\textheight]{main_files/figure-latex/DynForestRfactormindepth-1}
 
 }
 
